@@ -3,6 +3,7 @@
 * 12013: Reinstate removal of module tile cache when a module is removed from
     the Module Manager
 * 12007: Update Apple Silicon terminology in preferences and docs
+* 11994: Deck "send-when-empty" hotkeys no longer create extra undo steps
 * 11993: ActionButtons set to count 0 times don't spuriously execute 1 time
 * 11986: Add missing Section size symbol to NATO markers
 * 11982: Fixed multiplayer problems with detach option on Deselect trait
@@ -16,12 +17,15 @@
     tooltip will be drawn
 * 11884: 'OldMat' properties now set correctly regardless of order of Mat
     Cargo and Send-to-Location (etc.) traits
-* 11180: Triggers set to count 0 times don't spuriously execute 1 time
+* 11880: Triggers set to count 0 times don't spuriously execute 1 time
+* 11714: Deck's Send-when-Empty key now processes AFTER fully moving last card
 * 11627: ActionButtons with context menu flag no longer trigger context menu
     when a different ActionButton on same piece (that doesn't have the flag
     set) is clicked
 * 11462: Don't +1 inventory sum if property isn't even defined
 * 11437: Prevent NPE when right-clicking on a Deck with no menu items
+* 11429: Deck Empty Hotkey no longer repeats per online player instance, nor
+    when stepping forward a log
 
 3.6.11 - 3 February 2023
 
